[gd_scene load_steps=43 format=3 uid="uid://o3xe25iv73ol"]

[ext_resource type="Texture2D" uid="uid://b172a8o5x704l" path="res://assets/CharacterSprites/Ball and Chain Bot/idle.png" id="1_v0iea"]
[ext_resource type="Script" uid="uid://7wjsgtuxs4mw" path="res://Scenes/player.gd" id="1_x3wgy"]
[ext_resource type="Texture2D" uid="uid://bkdwt6uuelrq3" path="res://assets/CharacterSprites/Ball and Chain Bot/attack.png" id="2_3smsa"]
[ext_resource type="Texture2D" uid="uid://dm0j03t2b74ma" path="res://assets/CharacterSprites/Ball and Chain Bot/death.png" id="3_8erm5"]
[ext_resource type="Texture2D" uid="uid://biitdo5r2rohb" path="res://assets/CharacterSprites/Ball and Chain Bot/hit.png" id="4_f1ek2"]
[ext_resource type="Texture2D" uid="uid://cd1h0j8xmrbtn" path="res://assets/CharacterSprites/Ball and Chain Bot/run.png" id="6_tx1dd"]
[ext_resource type="Script" uid="uid://cvxp2ukgxcggt" path="res://Scenes/player_animation.gd" id="7_3smsa"]
[ext_resource type="Script" uid="uid://bgtojmcpg8ihg" path="res://Scenes/attack_area.gd" id="8_f1ek2"]
[ext_resource type="Script" uid="uid://cj7xhven8qwma" path="res://Scenes/player_attack_polygon.gd" id="9_tx1dd"]

[sub_resource type="Animation" id="Animation_x3wgy"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("PlayerAnimation:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAnimation:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("2_3smsa")
region = Rect2(5, 8, 121, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("2_3smsa")
region = Rect2(5, 46, 121, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("2_3smsa")
region = Rect2(5, 84, 121, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("2_3smsa")
region = Rect2(5, 122, 121, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("2_3smsa")
region = Rect2(5, 160, 121, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("2_3smsa")
region = Rect2(5, 198, 121, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("2_3smsa")
region = Rect2(5, 236, 121, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("2_3smsa")
region = Rect2(5, 274, 121, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("3_8erm5")
region = Rect2(44, 0, 42, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("3_8erm5")
region = Rect2(44, 39, 42, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqyp"]
atlas = ExtResource("3_8erm5")
region = Rect2(44, 78, 42, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjfl"]
atlas = ExtResource("3_8erm5")
region = Rect2(44, 117, 42, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi64h"]
atlas = ExtResource("3_8erm5")
region = Rect2(44, 156, 42, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ijsl"]
atlas = ExtResource("4_f1ek2")
region = Rect2(43, 0, 43, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1odr"]
atlas = ExtResource("4_f1ek2")
region = Rect2(43, 39, 43, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvnsp"]
atlas = ExtResource("1_v0iea")
region = Rect2(44, 0, 42, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t5aa"]
atlas = ExtResource("1_v0iea")
region = Rect2(44, 39, 42, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgqql"]
atlas = ExtResource("1_v0iea")
region = Rect2(44, 78, 42, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("1_v0iea")
region = Rect2(44, 117, 42, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("1_v0iea")
region = Rect2(44, 156, 42, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gysh"]
atlas = ExtResource("6_tx1dd")
region = Rect2(45, 0, 41, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfarp"]
atlas = ExtResource("6_tx1dd")
region = Rect2(45, 39, 41, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6uwr"]
atlas = ExtResource("6_tx1dd")
region = Rect2(45, 78, 41, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_83xs0"]
atlas = ExtResource("6_tx1dd")
region = Rect2(45, 117, 41, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypfnu"]
atlas = ExtResource("6_tx1dd")
region = Rect2(45, 156, 41, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuaoq"]
atlas = ExtResource("6_tx1dd")
region = Rect2(45, 195, 41, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_wohnl"]
atlas = ExtResource("6_tx1dd")
region = Rect2(45, 234, 41, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_36dho"]
atlas = ExtResource("6_tx1dd")
region = Rect2(45, 273, 41, 39)

[sub_resource type="SpriteFrames" id="SpriteFrames_3smsa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6n3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpjfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi64h")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ijsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1odr")
}],
"loop": true,
"name": &"Hit",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvnsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t5aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgqql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkybt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}],
"loop": true,
"name": &"Idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gysh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfarp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6uwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83xs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypfnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuaoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wohnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36dho")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_3smsa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerAnimation:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_3smsa")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAnimation:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerAnimation/AttackArea/PlayerAttackPolygon:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerAnimation/AttackArea/PlayerAttackPolygon:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(32, 3)]
}

[sub_resource type="Animation" id="Animation_8erm5"]
resource_name = "attack"
length = 1.4333
step = 0.002
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerAnimation:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAnimation/AttackArea/PlayerAttackPolygon:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8, 1.002599),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerAnimation/AttackArea/PlayerAttackPolygon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7747356),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(34, -2), Vector2(32, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f1ek2"]
_data = {
&"RESET": SubResource("Animation_3smsa"),
&"attack": SubResource("Animation_8erm5"),
&"new_animation": SubResource("Animation_x3wgy")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_x3wgy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_f1ek2")
}

[node name="PlayerAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 5)
sprite_frames = SubResource("SpriteFrames_3smsa")
animation = &"Attack"
script = ExtResource("7_3smsa")

[node name="AttackArea" type="Area2D" parent="PlayerAnimation"]
script = ExtResource("8_f1ek2")

[node name="PlayerAttackPolygon" type="CollisionPolygon2D" parent="PlayerAnimation/AttackArea"]
position = Vector2(32, 3)
polygon = PackedVector2Array(-22, 4, -12, 6, 6, 6, 17, 1, 16, -1, 9, -4, 3, -5, -13, -5, -13, -4, -5, -3, 4, -1, 10, 0, 6, 2, -2, 2, -20, 2, -23, 2)
script = ExtResource("9_tx1dd")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0, 3)
polygon = PackedVector2Array(-5, -8, 8, -7, 10, 5, 7, 14, -5, 13, -9, 1)

[connection signal="ready" from="." to="." method="ready"]
[connection signal="animation_finished" from="PlayerAnimation" to="." method="on_animation_finished"]
[connection signal="animation_looped" from="PlayerAnimation" to="." method="on_animation_looped"]
[connection signal="sprite_flipped" from="PlayerAnimation" to="PlayerAnimation/AttackArea" method="_on_player_animation_sprite_flipped"]
